# hypermodern-python-talk

./: .gitignore  README.md  package-lock.json  package.json
slides/: README.md  package-lock.json  package.json  slides.md
slides/components/: TechnologyDemandChart.vue
slides/setup/: main.ts
todo-api/: .pre-commit-config.yaml  README.md  pyproject.toml
todo-api/alembic/: env.py
todo-api/alembic/versions/: d1dc788696df_add_todos_table.py
todo-api/app/: main.py
todo-api/app/core/: __init__.py  config.py  db.py  deps.py
todo-api/app/models/: __init__.py  todo.py
todo-api/app/repos/: __init__.py  todos.py
todo-api/app/routers/: __init__.py  health_check.py  todos.py
todo-api/app/schemas/: __init__.py  health_check.py  todo.py
todo-api/scripts/: start_api.sh
todo-api/tests/: conftest.py
todo-api/tests/repos/: test_todos.py
todo-api/tests/routers/: test_health_check.py  test_todos.py
